# pydrobert-speech

./: .appveyor.yml  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE  LICENSE_sph2pipe  MANIFEST.in  README.md  README.rst  appveyor.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
docs/: cli_helper.py  requirements.txt
docs/source/: cli.rst  conf.py  index.rst  modules.rst  overview.rst  pydrobert.speech.alias.rst  pydrobert.speech.compute.rst  pydrobert.speech.config.rst  pydrobert.speech.corpus.rst  pydrobert.speech.filters.rst  pydrobert.speech.post.rst  pydrobert.speech.pre.rst  pydrobert.speech.rst  pydrobert.speech.scales.rst  pydrobert.speech.torch.rst  pydrobert.speech.util.rst  pydrobert.speech.vis.rst  references.rst
extras/: test1.aifc
pydrobert/: __init__.py
pydrobert/signal/: __init__.py  banks.py  command_line.py  compute.py  config.py  filters.py  post.py  pre.py  scales.py  util.py  vis.py
pydrobert/speech/: __init__.py  _sphere.py  command_line.py  compute.py  config.py  corpus.py  filters.py  post.py  pre.py  scales.py  util.py  vis.py
recipe/: build_conda.sh  meta.yaml
tests/: conftest.py  test_banks.py  test_command_line.py  test_compute.py  test_corpus.py  test_filters.py  test_metadata.py  test_post.py  test_pre.py  test_scales.py  test_torch.py  test_util.py
tests/audio/: 123_1pcbe.sph  123_1pcle.sph  123_1ulaw.sph  123_2pcbe.sph  123_2pcle.sph  123_2ulaw.sph  readme.txt  sin1k.aiff  sin1k.flac
tests/data/: fbank.json  fbank.yaml  kaldi.conf  (+3 more)
(+14 files in other folders)
