[metadata]
name = pydrobert-speech
description = Speech processing with Python
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files =
  LICENSE
  LICENSE_sph2pipe
url = https://github.com/sdrobert/pydrobert-speech
project_urls =
  Documentation = https://pydrobert-speech.readthedocs.io
author = Sean Robertson
author_email = sdrobert@cs.toronto.edu
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find_namespace:
package_dir =
  = src
python_requires = >= 3.7
install_requires =
  numpy

[options.entry_points]
console_scripts =
  compute-feats-from-kaldi-tables = pydrobert.speech.command_line:compute_feats_from_kaldi_tables [kaldi]
  signals-to-torch-feat-dir = pydrobert.speech.command_line:signals_to_torch_feat_dir [pytorch]

[options.packages.find]
where = src

[options.extras_require]
vis = matplotlib
kaldi = pydrobert-kaldi
pytorch = 
  torch >= 1.8

